--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             
    <div class="swiper-container">
 		<ul class="swiper-wrapper tabs">
-			<li class="swiper-slide active">                <div class="categorybtn">
+			<li class="swiper-slide"><div class="categorybtn">
                     <a href="#"><img src="#"></a>
                     <figcaption>학습/교육</figcaption>
                 </div></li>
