--- a/index.html
+++ b/index.html
@@ -60,17 +60,11 @@
     <figure>
         <div class="container-slideshow">
             <div class="mySlides fade"><img src="img/slideshow1.jpg" style="width:100%">
-            <div class="captext">어울림</div></div>
+            </div>
             <div class="mySlides fade"><img src="img/slideshow2.jpg" style="width:100%">
-            <div class="captext">마음이 통하는 사람들과 함께 하는 오늘</div></div>
+            </div>
             <div class="mySlides fade"><img src="img/slideshow3.jpg" style="width:100%">
-            <div class="captext">친목 액티비티 번개모임도 밋투데이</div></div>          
-        
-        </div>
-        <div>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
+            ></div>
         </div>
     </figure>
 
