--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="section-inner1">
             <div class="main-colum-1">
                 <h2 class="colum-title">지역별 분류</h2>
-                <form action="#">
+                <form action="#" target="meet-region.html">
                     <select name="region" class="search-region">
                         <option value="#">서울</option>
                         <option>부산</option>
@@ -122,40 +122,12 @@
                         <option>#</option>
                         <option>#</option>
                         <option>#</option>
-                    </select>&nbsp;
-                    <input class="inputbtn" type="summit" value="확인">
+                    </select>
                 </form>
 
-                <div class="meet-single">
-                    <p class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요 4명/성별무관/서울강남/2만원</p>
-                    <div class="meet-single-info">
-                        <span class="meet-single-region">서울/강남구</span>
-                        <span style="color:#dbdbdb">&#47;</span>
-                        <span class="meet-single-place">선릉역</span>
-                        <span style="color:#dbdbdb">&#47;</span>
-                        <span class="meet-single-date">2019-08-08</span>
-                        <span class="meet-single-time">19:00</span>&nbsp;
-                        <button class="button-apply" type="button">참여신청</button>
-                        <p style="margin:3px"></p>
-                        <span class="meet-single-id">아이디</span>&nbsp; &nbsp;
-                        <span class="meet-single-read">조회수</span>&nbsp; &nbsp;
-                        <span id="detailbtn1" style="CURSOR: hand; color:#0000ff;" onclick="if(detail1.style.display=='none') {detail1.style.display='' ; detailbtn1.innerText='접기'} else {detail1.style.display='none'; detailbtn1.innerText='펼쳐보기'}">펼쳐보기</span>
-                        <div id="detail1" style="display:none">
-                            <p>모임제목전체</p>
-                            <p>날짜 및 시간</p>
-                            <p>지역(대분류/소분류)</p>
-                            <p>세부지역</p>
-                            <p>카테고리</p>
-                            <p>신청인원 / 모집인원</p>
-                            <p>회비</p>
-                            <p>모임 설명</p>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
+                <iframe src="meet-region.html" name="meet-silgle-region">지역별 모임 분류</iframe>
+               
+                
             </div>
 
 
