--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </select>
                 </form>
 
-                <iframe src="meet-region.html" name="meet-silgle-region">지역별 모임 분류</iframe>
+                <iframe src="meet-region.html" name="meet-region">지역별 모임 분류</iframe>
                
                 
             </div>
